--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -390,7 +390,7 @@
       },
       "outputs": [],
       "source": [
-        "import subprocess,os\n",
+        "import subprocess,os,time\n",
         "'''\n",
         "\u6267\u884c!python -m xformers.info\u547d\u4ee4\u4f1a\u8fd4\u56de\u7c7b\u4f3c\u4ee5\u4e0b\u683c\u5f0f\u7684\u4fe1\u606f\uff0c\u8bf7\u53c2\u8003\n",
         "\n",
@@ -480,6 +480,7 @@
         "    # \u5bfb\u627eXformers\u9884\u7f16\u8bd1wheel\uff0c\u5e76\u5b89\u88c5\u8fd4\u56de\u5217\u8868\u4e2d\u7684\u7b2c\u4e00\u4e2awheel\n",
         "    whl_path = find_xformers_whl_and_install('/')\n",
         "    # \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
+        "    time.sleep(2)\n",
         "    if check_xformers_info(validate_rules):\n",
         "        print(f'\u5b89\u88c5{whl_path}\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
         "    else:\n",
