--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -444,6 +444,7 @@
         "\n",
         "def check_xformers_info(validate_rules):\n",
         "    info = get_xformers_info()\n",
+        "    print(info)\n",
         "    for key, value in validate_rules.items():\n",
         "        if info.get(key) != value:\n",
         "            if isinstance(value, bool):\n",
@@ -462,7 +463,7 @@
         "    if whl_path_list:\n",
         "        \n",
         "        whl_path = whl_path_list[0]\n",
-        "        !pip install $whl_path\n",
+        "        subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
@@ -480,7 +481,6 @@
         "    # \u5bfb\u627eXformers\u9884\u7f16\u8bd1wheel\uff0c\u5e76\u5b89\u88c5\u8fd4\u56de\u5217\u8868\u4e2d\u7684\u7b2c\u4e00\u4e2awheel\n",
         "    whl_path = find_xformers_whl_and_install('/')\n",
         "    # \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
-        "    time.sleep(2)\n",
         "    if check_xformers_info(validate_rules):\n",
         "        print(f'\u5b89\u88c5{whl_path}\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
         "    else:\n",
