--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -444,7 +444,7 @@
         "\n",
         "def check_xformers_info(validate_rules):\n",
         "    info = get_xformers_info()\n",
-        "    print(info)\n",
+        "    # print(info)\n",
         "    for key, value in validate_rules.items():\n",
         "        if info.get(key) != value:\n",
         "            if isinstance(value, bool):\n",
@@ -479,38 +479,47 @@
         "    print('Xformers\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u53e6\u5916\u5b89\u88c5\u6216\u7f16\u8bd1')\n",
         "else:\n",
         "    # \u5bfb\u627eXformers\u9884\u7f16\u8bd1wheel\uff0c\u5e76\u5b89\u88c5\u8fd4\u56de\u5217\u8868\u4e2d\u7684\u7b2c\u4e00\u4e2awheel\n",
-        "    whl_path = find_xformers_whl_and_install('/')\n",
-        "    # \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
-        "    if check_xformers_info(validate_rules):\n",
-        "        print(f'\u5b89\u88c5{whl_path}\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
-        "    else:\n",
-        "        print('\u9700\u8981\u5728\u672c\u673a\u8fdb\u884cXformers\u7684\u7f16\u8bd1')\n",
-        "        # (Optional) Makes the build much faster\n",
-        "        !pip install ninja\n",
-        "        # Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
-        "        # !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
+        "    whl_path = find_xformers_whl_and_install('/')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a2b66506-0c02-4968-a374-a88e9c357729",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
+        "if check_xformers_info(validate_rules):\n",
+        "    print(f'\u5b89\u88c5\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
+        "else:\n",
+        "    print('\u9700\u8981\u5728\u672c\u673a\u8fdb\u884cXformers\u7684\u7f16\u8bd1')\n",
+        "    # (Optional) Makes the build much faster\n",
+        "    !pip install ninja\n",
+        "    # Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
+        "    # !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
         "\n",
-        "        xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
+        "    xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
         "\n",
-        "        if not os.path.exists(xformers_repo_dir):\n",
-        "            !cd $root_dir &&\\\n",
-        "            git clone https://github.com/facebookresearch/xformers.git\n",
-        "\n",
-        "        # \u8bb0\u5f55\u4e00\u6b21\u7f16\u8bd1\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
+        "    if not os.path.exists(xformers_repo_dir):\n",
         "        !cd $root_dir &&\\\n",
-        "        cd xformers &&\\\n",
-        "        git show-ref main &&\\\n",
-        "        git symbolic-ref -q HEAD &&\\\n",
-        "        git submodule update --init --recursive -q &&\\\n",
-        "        python setup.py egg_info &&\\\n",
-        "        cd xformers.egg-info &&\\\n",
-        "        pip install -r requires.txt &&\\\n",
-        "        cd .. &&\\\n",
-        "        git rev-parse HEAD &&\\\n",
-        "        python setup.py bdist_wheel\n",
+        "        git clone https://github.com/facebookresearch/xformers.git\n",
         "\n",
-        "        # \u5b89\u88c5\u5b8c\u6210\u540e\uff0c\u627e\u5230\u5bf9\u5e94\u7684whl\uff0c\u4f7f\u7528pip\u8fdb\u884c\u5b89\u88c5\n",
-        "        find_xformers_whl_and_install('/')\n"
+        "    # \u8bb0\u5f55\u4e00\u6b21\u7f16\u8bd1\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
+        "    !cd $root_dir &&\\\n",
+        "    cd xformers &&\\\n",
+        "    git show-ref main &&\\\n",
+        "    git symbolic-ref -q HEAD &&\\\n",
+        "    git submodule update --init --recursive -q &&\\\n",
+        "    python setup.py egg_info &&\\\n",
+        "    cd xformers.egg-info &&\\\n",
+        "    pip install -r requires.txt &&\\\n",
+        "    cd .. &&\\\n",
+        "    git rev-parse HEAD &&\\\n",
+        "    python setup.py bdist_wheel\n",
+        "\n",
+        "    # \u5b89\u88c5\u5b8c\u6210\u540e\uff0c\u627e\u5230\u5bf9\u5e94\u7684whl\uff0c\u4f7f\u7528pip\u8fdb\u884c\u5b89\u88c5\n",
+        "    find_xformers_whl_and_install('/')"
       ]
     },
     {
@@ -1001,10 +1010,10 @@
         "    else:\n",
         "        if not os.path.exists(repos_dir):\n",
         "            !mkdir $repos_dir\n",
-        "        # !cp -r $input_repos_dir/* $repos_dir\n",
-        "        if os.path.exists(repos_dir):\n",
-        "            !rm -rf $repos_dir\n",
-        "        !ln -s $input_repos_dir $repos_dir\n",
+        "        !cp -r $input_repos_dir/* $repos_dir\n",
+        "        # if os.path.exists(repos_dir):\n",
+        "        #     !rm -rf $repos_dir\n",
+        "        # !ln -s $input_repos_dir $repos_dir\n",
         "else:\n",
         "    print('\u627e\u4e0d\u5230\u5bf9\u5e94\u7684\u6570\u636e\u96c6')"
       ]
