--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -489,94 +489,37 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
-        "if check_xformers_info(validate_rules):\n",
-        "    print(f'\u5b89\u88c5\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
-        "else:\n",
-        "    print('\u9700\u8981\u5728\u672c\u673a\u8fdb\u884cXformers\u7684\u7f16\u8bd1')\n",
-        "    # (Optional) Makes the build much faster\n",
-        "    !pip install ninja\n",
-        "    # Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
-        "    # !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
+        "# # \u5b89\u88c5\u5b8c\u518d\u6b21\u9a8c\u8bc1Xformers\u662f\u5426\u80fd\u6b63\u5e38\u8fd0\u4f5c\uff1a\n",
+        "# if check_xformers_info(validate_rules):\n",
+        "#     print(f'\u5b89\u88c5\u540e\u53ef\u4ee5\u6b63\u5e38\u8fd0\u884c\uff0c\u65e0\u9700\u91cd\u65b0\u7f16\u8bd1')\n",
+        "# else:\n",
+        "#     print('\u9700\u8981\u5728\u672c\u673a\u8fdb\u884cXformers\u7684\u7f16\u8bd1')\n",
+        "#     # (Optional) Makes the build much faster\n",
+        "#     !pip install ninja\n",
+        "#     # Set TORCH_CUDA_ARCH_LIST if running and building on different GPU types\n",
+        "#     # !pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers\n",
         "\n",
-        "    xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
+        "#     xformers_repo_dir = os.path.join(root_dir,'xformers')\n",
         "\n",
-        "    if not os.path.exists(xformers_repo_dir):\n",
-        "        !cd $root_dir &&\\\n",
-        "        git clone https://github.com/facebookresearch/xformers.git\n",
+        "#     if not os.path.exists(xformers_repo_dir):\n",
+        "#         !cd $root_dir &&\\\n",
+        "#         git clone https://github.com/facebookresearch/xformers.git\n",
         "\n",
-        "    # \u8bb0\u5f55\u4e00\u6b21\u7f16\u8bd1\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
-        "    !cd $root_dir &&\\\n",
-        "    cd xformers &&\\\n",
-        "    git show-ref main &&\\\n",
-        "    git symbolic-ref -q HEAD &&\\\n",
-        "    git submodule update --init --recursive -q &&\\\n",
-        "    python setup.py egg_info &&\\\n",
-        "    cd xformers.egg-info &&\\\n",
-        "    pip install -r requires.txt &&\\\n",
-        "    cd .. &&\\\n",
-        "    git rev-parse HEAD &&\\\n",
-        "    python setup.py bdist_wheel\n",
+        "#     # \u8bb0\u5f55\u4e00\u6b21\u7f16\u8bd1\u6240\u9700\u8017\u65f6\u4e3a 6m 17.51s\n",
+        "#     !cd $root_dir &&\\\n",
+        "#     cd xformers &&\\\n",
+        "#     git show-ref main &&\\\n",
+        "#     git symbolic-ref -q HEAD &&\\\n",
+        "#     git submodule update --init --recursive -q &&\\\n",
+        "#     python setup.py egg_info &&\\\n",
+        "#     cd xformers.egg-info &&\\\n",
+        "#     pip install -r requires.txt &&\\\n",
+        "#     cd .. &&\\\n",
+        "#     git rev-parse HEAD &&\\\n",
+        "#     python setup.py bdist_wheel\n",
         "\n",
-        "    # \u5b89\u88c5\u5b8c\u6210\u540e\uff0c\u627e\u5230\u5bf9\u5e94\u7684whl\uff0c\u4f7f\u7528pip\u8fdb\u884c\u5b89\u88c5\n",
-        "    find_xformers_whl_and_install('/')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a10b8b05-8839-4ccb-94c1-b514412dde5a",
-      "metadata": {
-        "scrolled": true
-      },
-      "outputs": [],
-      "source": [
-        "# xformers_install_args = base_args[:]\n",
-        "\n",
-        "# xformers_install_args += [\n",
-        "#     # 'conda install pytorch torchvision pytorch-cuda=11.7 -c pytorch -c nvidia -y',\n",
-        "#     # '&&',\n",
-        "#     # 'conda install xformers -c xformers/label/dev -y',\n",
-        "    \n",
-        "    \n",
-        "#     # '&&',\n",
-        "#     # 'conda install -f numpy -y','&&',\n",
-        "#     # 'pip install triton==2.0.0.dev20221120',\n",
-        "#     # 'pip install opencv-contrib-python'\n",
-        "#     # 'pip install \"opencv-python-headless<4.3\"','&&',\n",
-        "#     # 'pip install triton==2.0.0.dev20221120',\n",
-        "#     # '&&',\n",
-        "#     # 'conda install pytorch==1.12.0 torchvision==0.13.0 torchaudio==0.12.0 cudatoolkit=11.3 -c pytorch -y',\n",
-        "#     # '&&',\n",
-        "#     # 'pip install xformers'\n",
-        "# ]\n",
-        "\n",
-        "# xformers_install_cmd = (\" \").join(xformers_install_args)\n",
-        "\n",
-        "# !$xformers_install_cmd"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# from func.xformers import installXformers\n",
-        "# from func.env import setProxy\n",
-        "# from IPython.display import clear_output\n",
-        "\n",
-        "\n",
-        "# try:\n",
-        "#     proxy,region\n",
-        "# except NameError:\n",
-        "#     cb=setProxy()\n",
-        "#     proxy=cb['proxy']\n",
-        "#     region=cb['region']\n",
-        "#     clear_output(wait=True)\n",
-        "\n",
-        "# installXformers(proxy,region)"
+        "#     # \u5b89\u88c5\u5b8c\u6210\u540e\uff0c\u627e\u5230\u5bf9\u5e94\u7684whl\uff0c\u4f7f\u7528pip\u8fdb\u884c\u5b89\u88c5\n",
+        "#     find_xformers_whl_and_install('/')"
       ]
     },
     {
@@ -1010,10 +953,10 @@
         "    else:\n",
         "        if not os.path.exists(repos_dir):\n",
         "            !mkdir $repos_dir\n",
-        "        !cp -r $input_repos_dir/* $repos_dir\n",
-        "        # if os.path.exists(repos_dir):\n",
-        "        #     !rm -rf $repos_dir\n",
-        "        # !ln -s $input_repos_dir $repos_dir\n",
+        "        # !cp -r $input_repos_dir/* $repos_dir\n",
+        "        if os.path.exists(repos_dir):\n",
+        "            !rm -rf $repos_dir\n",
+        "        !ln -s $input_repos_dir $repos_dir\n",
         "else:\n",
         "    print('\u627e\u4e0d\u5230\u5bf9\u5e94\u7684\u6570\u636e\u96c6')"
       ]
