--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -463,7 +463,8 @@
         "    if whl_path_list:\n",
         "        \n",
         "        whl_path = whl_path_list[0]\n",
-        "        subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
+        "        # subprocess.run(['pip', 'install', whl_path], stdout=subprocess.PIPE)\n",
+        "        !pip install $whl_path\n",
         "        return whl_path\n",
         "    else:\n",
         "        return None\n",
