--- a/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
+++ b/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
@@ -51,11 +51,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "jupyter": {
-          "outputs_hidden": true
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "clone_and_install(\"https://github.com/huggingface/transformers.git\", \"/output/\")"
@@ -67,13 +63,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pip_install([\n",
-        "    \"sentencepiece\"\n",
-        "])\n",
+        "pip_install(\n",
+        "    \"sentencepiece\",\n",
+        ")\n",
         "\n",
-        "apt_install([\n",
+        "apt_install(\n",
         "    \"iputils-ping\",\n",
-        "])"
+        ")"
       ]
     },
     {
