--- a/nbfunc/installer.ipynb
+++ b/nbfunc/installer.ipynb
@@ -57,7 +57,7 @@
       "source": [
         "import subprocess\n",
         "\n",
-        "def pip_install(libraries_to_install):\n",
+        "def pip_install(*libraries_to_install):\n",
         "\n",
         "    installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
         "\n",
@@ -71,7 +71,7 @@
         "        else:\n",
         "            print(f\"pip\u5e93\u3010 {library} \u3011\u5df2\u7ecf\u5b89\u88c5\uff0c\u8df3\u8fc7\u5b89\u88c5\")\n",
         "\n",
-        "def apt_install(tools_to_install):\n",
+        "def apt_install(*tools_to_install):\n",
         "    # \u5c1d\u8bd5\u5b89\u88c5\u6240\u6709\u672a\u5b89\u88c5\u7684\u5de5\u5177\n",
         "    update_needed = False\n",
         "    for tool in tools_to_install:\n",
