add mount and unzip func

--- a/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
+++ b/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
@@ -132,9 +132,23 @@
       "outputs": [],
       "source": [
         "# \u52a0\u8f7d\u6a21\u578b\n",
-        "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
-        "# \u6307\u5b9a\u6a21\u578b\u4e0b\u8f7d\u5730\u5740\n",
+        "from transformers import T5Tokenizer,T5ForConditionalGeneration\n",
+        "\n",
+        "# \u6302\u8f7dinput\u4e2d\u7684\u6a21\u578b\u5230\u6307\u5b9a\u8def\u5f84\n",
         "cache_dir = \"/output/huggingface/hub\"\n",
+        "\n",
+        "# source_path,symlink_file_path = find_file_in_input_and_mount(\n",
+        "#     target = 'models--ClueAI--ChatYuan-large-v1.tar.zst',\n",
+        "#     symlink_path = cache_dir,\n",
+        "# )\n",
+        "\n",
+        "zstd_path = find_file_in_input('models--ClueAI--ChatYuan-large-v1.tar.zst')\n",
+        "\n",
+        "zstd_unzip(\n",
+        "    zstd_path = zstd_path,\n",
+        "    target_dir = cache_dir\n",
+        ")\n",
+        "# \u6307\u5b9a\u6a21\u578b\u7684\u5b89\u88c5\u76ee\u5f55\uff0c\u5982\u679c\u6ca1\u6709\u5bf9\u5e94\u7684\u76ee\u5f55\uff0c\u5219\u81ea\u52a8\u4e0b\u8f7d\n",
         "tokenizer = T5Tokenizer.from_pretrained(\"ClueAI/ChatYuan-large-v1\", cache_dir=cache_dir)\n",
         "model = T5ForConditionalGeneration.from_pretrained(\"ClueAI/ChatYuan-large-v1\", cache_dir=cache_dir)"
       ]
@@ -335,7 +349,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.8.15"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
