--- a/nbfunc/hub.ipynb
+++ b/nbfunc/hub.ipynb
@@ -51,13 +51,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "95a1d406-aded-49b9-a54a-ec4e471fd7a0",
+      "metadata": {},
+      "source": [
+        "## \u52a0\u8f7d\u51fd\u6570"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "75129a00-573e-4c1c-8f32-3c8b43587dd2",
       "metadata": {},
       "outputs": [],
       "source": [
-        "%run $repo_root_dir/nbfunc/installer.ipynb"
+        "%run $repo_root_dir/nbfunc/installer.ipynb\n",
+        "%run $repo_root_dir/nbfunc/mounter.ipynb\n",
+        "%run $repo_root_dir/nbfunc/unzip.ipynb"
       ]
     }
   ],
@@ -77,7 +87,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.8.15"
     }
   },
   "nbformat": 4,
