--- a/nbfunc/hub.ipynb
+++ b/nbfunc/hub.ipynb
@@ -67,7 +67,8 @@
       "source": [
         "%run $repo_root_dir/nbfunc/installer.ipynb\n",
         "%run $repo_root_dir/nbfunc/mounter.ipynb\n",
-        "%run $repo_root_dir/nbfunc/unzip.ipynb"
+        "%run $repo_root_dir/nbfunc/unzip.ipynb\n",
+        "%run $repo_root_dir/nbfunc/files.ipynb"
       ]
     }
   ],
