--- a/nbfunc/unzip.ipynb
+++ b/nbfunc/unzip.ipynb
@@ -12,26 +12,27 @@
         "import string\n",
         "import time\n",
         "\n",
-        "def zstd_unzip(zstd_path,target_dir):\n",
+        "def zstd_unzip(zstd_path,target_path):\n",
         "    real_path = os.path.realpath(zstd_path)\n",
+        "    target_parent_dir = os.path.dirname(target_path)\n",
+        "    if (not os.path.exists(target_parent_dir)):\n",
+        "        os.makedirs(target_parent_dir)\n",
         "    temp_name = ''.join(random.choices(string.ascii_letters + string.digits, k=10)) + \".tar\"\n",
         "    if not real_path.endswith(\".zst\"):\n",
         "        print(\"Not a valid zstd file.\")\n",
         "        return\n",
-        "    if not os.path.isdir(target_dir):\n",
-        "        os.mkdir(target_dir)\n",
-        "    if os.path.exists(os.path.join(target_dir,\"models--ClueAI--ChatYuan-large-v1\")):\n",
-        "        print(\"The target folder already exists, skip.\")\n",
+        "    if os.path.exists(target_path):\n",
+        "        print(\"The target file already exists, skip.\")\n",
         "        return\n",
         "    start_time = time.time()\n",
-        "    !time zstd -d $real_path -o $temp_name\n",
+        "    !zstd -d $real_path -o $temp_name\n",
         "    if not os.path.isfile(temp_name):\n",
         "        print(\"Error: Failed to decompress zstd file.\")\n",
         "        return\n",
         "    if not temp_name.endswith(\".tar\"):\n",
         "        print(\"Not a valid tar file.\")\n",
         "        return\n",
-        "    !time tar -xvf $temp_name -C $target_dir\n",
+        "    !tar -xvf $temp_name -C $(dirname $target_path)\n",
         "    os.remove(temp_name)\n",
         "    end_time = time.time()\n",
         "    print(\"Total time taken: \", end_time - start_time)\n"
