--- a/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
+++ b/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
@@ -131,23 +131,32 @@
       },
       "outputs": [],
       "source": [
-        "# \u52a0\u8f7d\u6a21\u578b\n",
-        "from transformers import T5Tokenizer,T5ForConditionalGeneration\n",
+        "# \u641c\u7d22input\u4e2d\u7684zst\u6587\u4ef6\uff0c\u89e3\u538b\u5230\u6307\u5b9a\u7684\u76ee\u5f55\uff08\u4e2d\u95f4\u4f1a\u4ea7\u751ftar\u4e2d\u95f4\u4ea7\u7269\uff09\n",
+        "import os\n",
         "\n",
-        "# \u6302\u8f7dinput\u4e2d\u7684\u6a21\u578b\u5230\u6307\u5b9a\u8def\u5f84\n",
         "cache_dir = \"/output/huggingface/hub\"\n",
         "\n",
-        "# source_path,symlink_file_path = find_file_in_input_and_mount(\n",
-        "#     target = 'models--ClueAI--ChatYuan-large-v1.tar.zst',\n",
-        "#     symlink_path = cache_dir,\n",
-        "# )\n",
+        "zst_filename = 'models--ClueAI--ChatYuan-large-v1.tar.zst'\n",
+        "zst_filename_no_ext = remove_extension(zst_filename)\n",
+        "print('zst_filename_no_ext: ',zst_filename_no_ext)\n",
         "\n",
-        "zstd_path = find_file_in_input('models--ClueAI--ChatYuan-large-v1.tar.zst')\n",
+        "zstd_path = find_file_in_input(zst_filename)\n",
+        "target_path = os.path.join(cache_dir,zst_filename_no_ext)\n",
         "\n",
         "zstd_unzip(\n",
         "    zstd_path = zstd_path,\n",
-        "    target_dir = cache_dir\n",
-        ")\n",
+        "    target_path = target_path\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u52a0\u8f7d\u6a21\u578b\n",
+        "from transformers import T5Tokenizer,T5ForConditionalGeneration\n",
         "# \u6307\u5b9a\u6a21\u578b\u7684\u5b89\u88c5\u76ee\u5f55\uff0c\u5982\u679c\u6ca1\u6709\u5bf9\u5e94\u7684\u76ee\u5f55\uff0c\u5219\u81ea\u52a8\u4e0b\u8f7d\n",
         "tokenizer = T5Tokenizer.from_pretrained(\"ClueAI/ChatYuan-large-v1\", cache_dir=cache_dir)\n",
         "model = T5ForConditionalGeneration.from_pretrained(\"ClueAI/ChatYuan-large-v1\", cache_dir=cache_dir)"
