--- a/nbfunc/mounter.ipynb
+++ b/nbfunc/mounter.ipynb
@@ -29,7 +29,7 @@
         "def find_file_in_input(target):\n",
         "    # \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
         "    for i in range(5):\n",
-        "        file_dir = find_ckpt_file(f\"/input{i}\",target)\n",
+        "        file_dir = find_file(f\"/input{i}\",target)\n",
         "        if file_dir:\n",
         "            # \u5982\u679c\u627e\u5230\u4e86 v2-1_768-nonema-pruned.ckpt \u6587\u4ef6\uff0c\u5219\u8f93\u51fa\u6587\u4ef6\u7684\u5b8c\u6574\u8def\u5f84\n",
         "            # print(f'\u627e\u5230\u76ee\u6807\u6587\u4ef6\uff0c\u8be6\u7ec6\u8def\u5f84\u4e3a\uff1a{file_dir}')\n",
