auto detect cuda

--- a/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
+++ b/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
@@ -174,12 +174,16 @@
       },
       "outputs": [],
       "source": [
-        "# \u4f7f\u7528\n",
         "import torch\n",
         "from transformers import AutoTokenizer\n",
-        "# \u4fee\u6539colab\u7b14\u8bb0\u672c\u8bbe\u7f6e\u4e3agpu\uff0c\u63a8\u7406\u66f4\u5feb\n",
-        "device = torch.device('cuda')\n",
-        "model.to(device)\n",
+        "\n",
+        "# \u68c0\u67e5CUDA\u662f\u5426\u53ef\u7528\n",
+        "use_cuda = torch.cuda.is_available()\n",
+        "print('\u662f\u5426\u4f7f\u7528CUDA\uff1a',use_cuda)\n",
+        "\n",
+        "# \u5982\u679cCUDA\u53ef\u7528\u5219\u4f7f\u7528CUDA\uff0c\u5426\u5219\u4f7f\u7528cpu\u6765\u9884\u6d4b\n",
+        "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+        "\n",
         "def preprocess(text):\n",
         "  text = text.replace(\"\\n\", \"\\\\n\").replace(\"\\t\", \"\\\\t\")\n",
         "  return text\n",
@@ -254,7 +258,7 @@
       },
       "outputs": [],
       "source": [
-        "input_text0 = \"\u7528\u82f1\u6587\u5e2e\u6211\u5199\u4e00\u4e2a\u8bf7\u5047\u6761\uff0c\u6211\u56e0\u4e3a\u65b0\u51a0\u4e0d\u8212\u670d\uff0c\u9700\u8981\u8bf7\u50473\u5929\uff0c\u8bf7\u9886\u5bfc\u6279\u51c6\"\n",
+        "input_text0 = \"\u5e2e\u6211\u5199\u4e00\u4e2a\u8bf7\u5047\u6761\uff0c\u6211\u56e0\u4e3a\u65b0\u51a0\u4e0d\u8212\u670d\uff0c\u9700\u8981\u8bf7\u50473\u5929\uff0c\u8bf7\u9886\u5bfc\u6279\u51c6\"\n",
         "input_text1 = \"\u4f60\u80fd\u5e72\u4ec0\u4e48\"\n",
         "input_text2 = \"\u7528\u82f1\u6587\u5199\u4e00\u5c01\u9053\u6b49\u7684\u90ae\u4ef6\uff0c\u8868\u8fbe\u56e0\u4e3a\u7269\u6d41\u5ef6\u8bef\uff0c\u4e0d\u80fd\u5982\u671f\u5230\u8fbe\uff0c\u6211\u4eec\u53ef\u4ee5\u8d54\u507f\u8d35\u516c\u53f8\u6240\u6709\u635f\u5931\"\n",
         "input_text3 = \"\u5199\u4e00\u4e2a\u6587\u7ae0\uff0c\u9898\u76ee\u662f\u672a\u6765\u57ce\u5e02\"\n",
@@ -336,6 +340,13 @@
         "output_text = answer(input_text, top_p=0.9)\n",
         "print(f\"{input_text}{output_text}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
