--- a/nbfunc/installer.ipynb
+++ b/nbfunc/installer.ipynb
@@ -37,7 +37,29 @@
         "        !pip install $repo_path\n",
         "        print(f\"Repository {url} installed to {repo_path}\")\n",
         "    except Exception as e:\n",
-        "        print(e)\n"
+        "        print(e)\n",
+        "        \n",
+        "def shallow_clone_repo(url, directory):\n",
+        "    repo_name = url.split(\"/\")[-1].replace(\".git\", \"\")\n",
+        "    repo_path = os.path.join(directory, repo_name)\n",
+        "    if os.path.exists(repo_path):\n",
+        "        print(f\"Repository {url} already exists in {directory}\")\n",
+        "        return\n",
+        "    try:\n",
+        "        !git clone --depth 1 {url} {repo_path}\n",
+        "        print(f\"Repository {url} cloned to {repo_path}\")\n",
+        "    except Exception as e:\n",
+        "        print(e)\n",
+        "        \n",
+        "def shallow_clone_and_install(url, directory):\n",
+        "    shallow_clone_repo(url, directory)\n",
+        "    repo_name = url.split(\"/\")[-1].replace(\".git\", \"\")\n",
+        "    repo_path = os.path.join(directory, repo_name)\n",
+        "    try:\n",
+        "        !pip install $repo_path\n",
+        "        print(f\"Repository {url} installed to {repo_path}\")\n",
+        "    except Exception as e:\n",
+        "        print(e)"
       ]
     },
     {
