--- a/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
+++ b/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
@@ -54,7 +54,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "clone_and_install(\"https://github.com/huggingface/transformers.git\", \"/output/\")"
+        "shallow_clone_and_install(\"https://github.com/huggingface/transformers.git\", \"/output/\")"
       ]
     },
     {
@@ -369,7 +369,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.15"
+      "version": "3.8.13"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
