--- a/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
+++ b/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
@@ -177,12 +177,16 @@
         "import torch\n",
         "from transformers import AutoTokenizer\n",
         "\n",
-        "# \u68c0\u67e5CUDA\u662f\u5426\u53ef\u7528\n",
-        "use_cuda = torch.cuda.is_available()\n",
-        "print('\u662f\u5426\u4f7f\u7528CUDA\uff1a',use_cuda)\n",
+        "# \u5224\u65ad\u662f\u5426\u6709\u53ef\u7528\u7684GPU\n",
+        "if torch.cuda.is_available():\n",
+        "    device = torch.device('cuda')\n",
+        "    print(\"\u4f7f\u7528 CUDA \u8fdb\u884c\u63a8\u7406\")\n",
+        "else:\n",
+        "    device = torch.device('cpu')\n",
+        "    print(\"\u4f7f\u7528 CPU \u8fdb\u884c\u63a8\u7406\")\n",
         "\n",
-        "# \u5982\u679cCUDA\u53ef\u7528\u5219\u4f7f\u7528CUDA\uff0c\u5426\u5219\u4f7f\u7528cpu\u6765\u9884\u6d4b\n",
-        "device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+        "# \u5c06\u6a21\u578b\u79fb\u52a8\u5230\u6240\u9009\u8bbe\u5907\n",
+        "model.to(device)\n",
         "\n",
         "def preprocess(text):\n",
         "  text = text.replace(\"\\n\", \"\\\\n\").replace(\"\\t\", \"\\\\t\")\n",
