--- a/init.ipynb
+++ b/init.ipynb
@@ -18,7 +18,7 @@
         "import subprocess\n",
         "\n",
         "libraries_to_install = [\n",
-        "    \"jupyterthemes\"\n",
+        "    # \"jupyterthemes\"\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -128,8 +128,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!jt -l\n",
-        "!jt -t 'oceans16'"
+        "# !jt -l\n",
+        "# !jt -t 'oceans16'"
       ]
     },
     {
@@ -157,7 +157,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.13"
     }
   },
   "nbformat": 4,
