--- a/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
+++ b/ipynb/promptCLUE/prediction-PromptCLUE-large-for-OpenBayes.ipynb
@@ -54,7 +54,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "shallow_clone_and_install(\"https://github.com/huggingface/transformers.git\", \"/output/\")"
+        "shallow_clone_and_install(\"https://github.com/huggingface/transformers.git\", \"/openbayes/\")"
       ]
     },
     {
@@ -134,7 +134,7 @@
         "# \u641c\u7d22input\u4e2d\u7684zst\u6587\u4ef6\uff0c\u89e3\u538b\u5230\u6307\u5b9a\u7684\u76ee\u5f55\uff08\u4e2d\u95f4\u4f1a\u4ea7\u751ftar\u4e2d\u95f4\u4ea7\u7269\uff09\n",
         "import os\n",
         "\n",
-        "cache_dir = \"/output/huggingface/hub\"\n",
+        "cache_dir = \"/openbayes/huggingface/hub\"\n",
         "\n",
         "zst_filename = 'models--ClueAI--ChatYuan-large-v1.tar.zst'\n",
         "zst_filename_no_ext = remove_extension(zst_filename)\n",
