--- a/ipynb/AD-NeRF/AD-NeRF-for-Openbayes.ipynb
+++ b/ipynb/AD-NeRF/AD-NeRF-for-Openbayes.ipynb
@@ -256,6 +256,18 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "9dfa7679-64c8-4a3c-a7b2-db6a33bebe2b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!cd $content_path &&\\\n",
+        "cd AD-NeRF/data_util/face_tracking/3DMM/ &&\\\n",
+        "wget https://github.com/jadewu/3D-Human-Face-Reconstruction-with-3DMM-face-model-from-RGB-image/raw/main/BFM/01_MorphableModel.mat"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "52d42a10-741d-49e4-8a94-268542bff97c",
       "metadata": {},
       "outputs": [],
@@ -415,9 +427,78 @@
       "outputs": [],
       "source": [
         "# \u7528\u53e6\u4e00\u4e2a\u97f3\u9891\u8f93\u5165\u9a71\u52a8\u76ee\u6807\u4eba\u7269\n",
-        "\n",
+        "!cd $content_path &&\\\n",
+        "cd AD-NeRF &&\\\n",
+        "source activate &&\\\n",
+        "conda activate adnerf &&\\\n",
         "!python NeRFs/TorsoNeRF/run_nerf.py --config dataset/$id/TorsoNeRFTest_config.txt --aud_file=${deepspeechfile.npy} --test_size=-1"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "389ed62d-b6bb-4bdf-92e7-40522060e70f",
+      "metadata": {},
+      "source": [
+        "# \u4f7f\u7528\u9884\u8bad\u7ec3\u6a21\u578b\u6765\u8fdb\u884c\u6e32\u67d3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7c1f0cde-d67d-4072-a46d-e70e07cfb0e5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u5b9a\u4e49 id \u540d\n",
+        "id = 'Obama'"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "40c74a3a-ef72-476f-96cc-cf59e1d6777f",
+      "metadata": {},
+      "source": [
+        "## \u6570\u636e\u9884\u5904\u7406"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cb05e40a-41c0-4f1d-9da0-50cb7c07a140",
+      "metadata": {
+        "scrolled": true
+      },
+      "outputs": [],
+      "source": [
+        "!source activate &&\\\n",
+        "conda activate adnerf &&\\\n",
+        "cd $content_path &&\\\n",
+        "cd AD-NeRF &&\\\n",
+        "python process_data.py --id=$id --step=0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1b234b41-ab50-4df1-8660-d4bc1507e3ef",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# \u7528\u97f3\u9891\u8f93\u5165\u91cd\u5efa\u539f\u59cb\u89c6\u9891\n",
+        "!cd $content_path &&\\\n",
+        "cd AD-NeRF &&\\\n",
+        "source activate &&\\\n",
+        "conda activate adnerf &&\\\n",
+        "python NeRFs/TorsoNeRF/run_nerf.py --config pretrained_models/TorsoNeRFTest_config.txt --aud_file=dataset/$id/aud.npy --test_size=300"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "df0e29b8-28ba-402f-9481-3d9decd20cc0",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
