add new dependences of Fast-Dreambooth

--- a/ipynb/dreambooth/clipboard/dreambooth-ClipboardForOpenbayes.ipynb
+++ b/ipynb/dreambooth/clipboard/dreambooth-ClipboardForOpenbayes.ipynb
@@ -88,27 +88,26 @@
         "# \u5b9a\u4e49\u4e0b\u8f7d\u548c\u89e3\u538b\u4f9d\u8d56\u51fd\u6570\n",
         "def download_and_unzip_dependencies():\n",
         "    %cd /openbayes/home/content/\n",
-        "    for i in range(1,6):\n",
-        "        if not os.path.exists(f\"/openbayes/home/content/Dependencies.7z.00{i}\"):\n",
-        "            !$proxy && wget \"https://github.com/TheLastBen/fast-stable-diffusion/raw/main/Dependencies/Dependencies.{i}\"\n",
-        "            !mv \"Dependencies.{i}\" \"Dependencies.7z.00{i}\"\n",
-        "    print('Dependencies\u76847z\u90fd\u5df2\u7ecf\u5728\u672c\u5730\u4e86\uff0c\u65e0\u9700\u4e0b\u8f7d')\n",
+        "    zip_filename = 'python3.8-dist-packages-extreme.7z'\n",
+        "\n",
+        "    # if not os.path.exists(f\"/openbayes/home/content/{zip_filename}\"):\n",
+        "    #     !$proxy && wget \"https://github.com/TheLastBen/fast-stable-diffusion/raw/main/Dependencies/Dependencies.{i}\"\n",
+        "    #     !mv \"Dependencies.{i}\" $zip_filename\n",
+        "    # print('Dependencies\u76847z\u90fd\u5df2\u7ecf\u5728\u672c\u5730\u4e86\uff0c\u65e0\u9700\u4e0b\u8f7d')\n",
         "\n",
         "    # \u68c0\u67e5 7z \u662f\u5426\u5df2\u7ecf\u89e3\u538b\n",
         "    unzip_result_exist = os.path.exists(\"/openbayes/home/content/usr/local/lib/python3.8/dist-packages\")\n",
         "    if not unzip_result_exist:\n",
         "        # \u5bf97z\u6587\u4ef6\u8fdb\u884c\u89e3\u538b\n",
         "        try:\n",
-        "            result = subprocess.run(['7z', 'x', '-y', 'Dependencies.7z.001'], stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+        "            result = subprocess.run(['7z', 'x', '-y', zip_filename], stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
         "            if result.returncode == 0:\n",
         "                print('7z\u89e3\u538b\u547d\u4ee4\u6267\u884c\u6210\u529f')\n",
         "            else:\n",
         "                print('7z\u89e3\u538b\u547d\u4ee4\u6267\u884c\u5931\u8d25:', result.stderr)\n",
         "                print('\u6b63\u51c6\u5907\u91cd\u65b0\u4e0b\u8f7d')\n",
         "                # \u5220\u9664\n",
-        "                for i in range(1,6):\n",
-        "                    filename=f\"Dependencies.7z.00{i}\"\n",
-        "                    !rm -rf $filename\n",
+        "                !rm -rf $zip_filename\n",
         "                # \u91cd\u65b0\u4e0b\u8f7d\n",
         "                download_and_unzip_dependencies()\n",
         "        except Exception as e:\n",
