--- a/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -17,7 +17,7 @@
       "source": [
         "form_inputs_replacements = {\n",
         "    \"Model_Version\": \"V2.1-768px\",\n",
-        "    \"Session_Name\": \"FuXingHao768\",\n",
+        "    \"Session_Name\": \"LcoLok_768_OpenBayes\",\n",
         "    \"Crop_size\": 768,\n",
         "    \"Remove_existing_instance_images\": False,\n",
         "    # \"IMAGES_FOLDER_OPTIONAL\": \"/openbayes/home/content/gdrive/MyDrive/Fast-Dreambooth/Sessions/FuXingHao768/instance_images\",\n",
@@ -88,13 +88,13 @@
         "import subprocess\n",
         "\n",
         "libraries_to_install = [\n",
-        "    \"black[jupyter]\",\n",
+        "    # \"black[jupyter]\",\n",
         "    \"wget\",\n",
-        "    \"transformers\",\n",
-        "    \"bitsandbytes==0.36.0.post2\",\n",
-        "    \"jax\",\n",
-        "    \"xformers==0.0.16rc424\",\n",
-        "    \"triton==2.0.0.dev20221120\",\n",
+        "    # \"transformers\",\n",
+        "    # \"bitsandbytes==0.36.0.post2\",\n",
+        "    # \"jax\",\n",
+        "    # \"xformers==0.0.16rc424\",\n",
+        "    # \"triton==2.0.0.dev20221120\",\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -329,10 +329,29 @@
       "source": [
         "import os\n",
         "session_name = form_inputs_replacements['Session_Name']\n",
-        "session_path = os.path.join(content_path,'./gdrive/MyDrive/Fast-Dreambooth/Sessions',session_name,'instance_images')\n",
-        "session_path=os.path.realpath(session_path)\n",
-        "print(session_path)\n",
-        "!mkdir -p $session_path"
+        "session_path = os.path.join(content_path,'./gdrive/MyDrive/Fast-Dreambooth/Sessions')\n",
+        "cur_session_path = os.path.join(session_path,session_name)\n",
+        "cur_instance_images_path = os.path.join(cur_session_path,'instance_images')\n",
+        "cur_captions_path = os.path.join(cur_session_path,'captions')\n",
+        "# session_path=os.path.realpath(session_path)\n",
+        "# print(session_path)\n",
+        "!mkdir -p $cur_instance_images_path\n",
+        "!mkdir -p $cur_captions_path\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "755a2e85-a7df-4ed3-9ccd-87922506bb3b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from func.checksum import generate_checksum,find_folder\n",
+        "\n",
+        "generate_checksum(\"/openbayes/input/input0/\")\n",
+        "\n",
+        "new_dependencies_dir=find_folder('/openbayes/input','1154d499cf8d76268545c3b1ab9a3813507b26e4d16dc57fbcf9ab50110d79d0')\n",
+        "print(new_dependencies_dir)"
       ]
     },
     {
@@ -373,6 +392,7 @@
         "        print(f\"{symlink_file} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
         "\n",
         "        \n",
+        "        \n",
         "# # \u5728output\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2atf_dir\u6307\u5411dreambooth\u6253\u5370\u7684logs\u8f6f\u8fde\u63a5  \n",
         "# create_symlink(\n",
         "#     source_path=\"/output/content/models/FuXingHao768/logs/\", \n",
@@ -398,6 +418,20 @@
         "                )\n",
         "    \n",
         "    check_dependencies_and_make_symbollink()\n",
+        "    \n",
+        "    def check_new_dependencies_and_make_symbollink():\n",
+        "        new_dependencies_dir=find_folder('/openbayes/input','1154d499cf8d76268545c3b1ab9a3813507b26e4d16dc57fbcf9ab50110d79d0')\n",
+        "        if new_dependencies_dir:\n",
+        "            print(f'\u5df2\u627e\u5230\u5e26\u6709\u65b0\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{new_dependencies_dir}')\n",
+        "        if new_dependencies_dir:\n",
+        "            for file in os.listdir(new_dependencies_dir):\n",
+        "                create_symlink(\n",
+        "                    source_path=os.path.join(new_dependencies_dir,file), \n",
+        "                    symlink_path='/output/content', \n",
+        "                    symlink_name=file \n",
+        "                )\n",
+        "            \n",
+        "    check_new_dependencies_and_make_symbollink()\n",
         "    \n",
         "    def check_model_and_make_symbollink():\n",
         "        stable_diffusion_v2_dir=find_folder('/openbayes','7d3e9649526266e0e69b9bad33e509975ba261fb5b6c8ce3b7c26495c4ac4dcb') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
@@ -896,7 +930,7 @@
         "\n",
         "    # \u7279\u5f81\u5b57\u7b26\u4e32\u5217\u8868\uff0c\u7528\u4e8e\u641c\u7d22\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\u4e2d\u7684Cell\u548c\u4ee3\u7801\u526a\u8d34\u677f\u6587\u4ef6\u4e2d\u7684Cell\n",
         "    replaceList = [\n",
-        "            # '@markdown # Dependencies',\n",
+        "            '@markdown # Dependencies',\n",
         "        ]        \n",
         "    \n",
         "    # \u904d\u5386\u88ab\u4fee\u6539\u5bf9\u8c61\u6587\u4ef6\u4e2d\u7684\u6240\u6709Cell\n",
@@ -1169,7 +1203,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.15"
     },
     "vscode": {
       "interpreter": {
