add from PIL import Image

--- a/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/ipynb/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -752,6 +752,7 @@
         "            # Initialize the flag variable\n",
         "            import_find_repo_root_added = False\n",
         "            import_added = False\n",
+        "            import_image_added = False\n",
         "            # \u9690\u85cf\u4ee3\u7801\n",
         "            cell[\"metadata\"] = {\"collapsed\": True}\n",
         "            # \u6e05\u9664\u4ee3\u7801\u5355\u5143\u683c\u7684\u6267\u884c\u6b21\u6570\n",
@@ -846,6 +847,16 @@
         "                    cell[\"source\"] = import_statements_with_newline + cell[\"source\"]\n",
         "                    # Set the flag to indicate that the import has been added\n",
         "                    import_find_repo_root_added = True\n",
+        "                    \n",
+        "                if \"Image\" in line and not import_image_added:\n",
+        "                    import_image_statements = [\n",
+        "                        \"from PIL import Image\",\n",
+        "                    ]\n",
+        "                    import_image_statements_with_newline = [\n",
+        "                        s + \"\\n\" for s in import_image_statements\n",
+        "                    ]\n",
+        "                    cell[\"source\"] = import_image_statements_with_newline + cell[\"source\"]\n",
+        "                    import_image_added = True\n",
         "                    \n",
         "            for i, line in enumerate(cell[\"source\"]):    \n",
         "                # \u628apip\u5b89\u88c5\u7684\u9759\u9ed8\u53bb\u6389\n",
